# PyAutoEden

./: .gitignore  README.md  requirements.txt  to_gitlab.sh
autoeden/: __init__.py  file.py  function.py  import_.py  line.py  package.py  util.py
build_eden/: README.md
build_eden/SHE_ArCTIC/SHE_ArCTICPy/python/SHE_ArCTICPy/: dictable.py
build_eden/SHE_Arctic/: CMakeLists.txt  eden_test.sh
build_eden/SHE_Arctic/SHE_ArCTIC/: CMakeLists.txt
build_eden/SHE_Arctic/SHE_ArCTIC/SHE_ArCTIC/: modules.json
build_eden/SHE_Arctic/SHE_ArCTIC/src/wrapper/: modules.json
build_eden/SHE_Arctic/SHE_ArCTIC/tests/src/: modules.json  test_arcticpy.py
build_eden/SHE_Arctic/SHE_ArCTICPy/python/SHE_ArCTICPy/: ccd.py  cti.py  modules.json  traps.py
build_eden/SHE_Arctic/SHE_ArCTICPy/tests/python/: modules.json  test_arcticpy.py
build_eden/SHE_Arctic/SHE_ArCTIC_Programs/: CMakeLists.txt
build_eden/SHE_Arctic/SHE_ArCTIC_Programs/python/SHE_ArCTIC_Programs/: SHE_ArCTIC_wrapper_tst.py
build_eden/SHE_SLModel/: .gitignore  .jenkinsFile  CMakeLists.txt  LODEEN_COMMANDS  eden.sh  eden_test.sh
build_eden/SHE_SLModel/SHE_SLModel_Autogalaxy/python/SHE_SLModel_Autogalaxy/: __init__.py  convert.py  exc.py
build_eden/SHE_SLModel/SHE_SLModel_Programs/: CMakeLists.txt
build_eden/SLE_Model/: .gitignore  .jenkinsFile  CMakeLists.txt  LODEEN_COMMANDS  Makefile
build_eden/SLE_Model/SLE_Model_Autoarray/: CMakeLists.txt  conftest.py
build_eden/SLE_Model/SLE_Model_Autoarray/python/SLE_Model_Autoarray/: exc.py  (+7 more)
build_eden/SLE_Model/SLE_Model_Autoconf/: CMakeLists.txt
build_eden/SLE_Model/SLE_Model_Autofit/: CMakeLists.txt  conftest.py
build_eden/SLE_Model/SLE_Model_Autogalaxy/: CMakeLists.txt  conftest.py
build_eden/SLE_Model/SLE_Model_Autolens/: CMakeLists.txt  conftest.py
build_eden/SLE_Model/SLE_Model_Programs/: CMakeLists.txt
build_eden/VIS_CTI/VIS_CTI_Autoarray/: CMakeLists.txt  conftest.py
build_eden/VIS_CTI/VIS_CTI_Autoconf/: CMakeLists.txt
build_eden/VIS_CTI/VIS_CTI_Autocti/: CMakeLists.txt  conftest.py
build_eden/VIS_CTI/VIS_CTI_Autofit/: CMakeLists.txt  conftest.py
build_eden/VIS_CTI/VIS_CTI_Programs/: CMakeLists.txt
config/: general.ini
config/grids/: radial_minimum.ini
config/non_linear/nest/: DynestyStatic.ini
config/notation/: README.rst
config/priors/: traps.json
config/visualize/: doc_general  include.ini  plots.ini
integration/: VIS_calibrate_ci.py  VIS_calibrate_file_entry_point.py  VIS_correct_cti.py  cti_clocker_v540.json  cti_clocker_v540_arcticpy.json  cti_model_v540_BOL.json  cti_model_v540_BOL_arcticpy.json
scripts/: edenise.py
scripts/config/: general.ini
scripts/config/non_linear/nest/: DynestyStatic.ini
scripts/config/visualize/: include.ini  plots.ini
scripts/she/: clean.py  make.py  replace_dict.json
scripts/she/template/SHE_ArCTIC/: .gitignore  .jenkinsFile  eden.sh
scripts/sl/: clean.py  make.py  replace_dict.json
scripts/sle/: clean.py  make.py  remove_list.json  replace_dict.json
scripts/sle/manual/SLE_Model_Dynesty/: abstract.py  dynamic.py  plotter.py  samples.py  static.py
scripts/sle/tests/: test_abstract.py  test_array_2d.py  test_basis.py  test_dict.json  test_dynesty.py  test_fit_imaging.py
scripts/tests/: test_abstract.py  test_arcticpy.py  test_array_2d.py  test_config.py  test_fit_ci_plots.py  test_multi_nest.py  test_ou_sim_ci.py
scripts/vis/: clean.py  make.py  remove_list.json  replace_dict.json
scripts/vis/manual/: dictable.py
scripts/vis/manual/VIS_CTI_Dynesty/: __init__.py  abstract.py
scripts/vis/manual/VIS_CTI_Model/: model_util.py
scripts/vis/tests/: test_abstract.py  test_arcticpy.py  test_array_2d.py  test_config.py  test_dict.json  test_dynesty.py  test_fit_ci_plots.py  test_ou_sim_ci.py
test_autoeden/: conftest.py  test_ast.py  test_import.py  test_is_in_project.py  test_package.py  test_regression.py  test_structure.py  test_type_annotations.py
test_autoeden/.pytest_cache/v/cache/: lastfailed  nodeids
test_autoeden/examples/: prior.py  shortcut_imports.py
test_autoeden/test_examples/: test_aliased_relative_import.py  test_doc_string.py  test_local_import.py  test_other_projects.py  test_regression.py  test_second_level_from.py  test_shortcut_imports.py  test_unpack_imports.py
(+1118 files in other folders)
